--- a/src/WiX.Toolset.nuspec
+++ b/src/WiX.Toolset.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata minClientVersion="2.7">
         <id>WiX.Toolset.UnofficialFork</id>
-        <version>3.10.1</version>
+        <version>3.10.2</version>
         <title>WiX Toolset v3.10 (unofficial)</title>
         <summary>Windows Installer XML (WiX Toolset) binaries for compiling setup projects.</summary>
         <description>This package contains the binaries needed to compile Windows Installer XML (WiX) setup projects. Just add this NuGet package to your WiX setup projects and you're done (no setup required on build servers etc.). Note that you still need to install WiX Toolset in Visual Studio to get the editor experience.
@@ -16,10 +16,13 @@
         <iconUrl>http://wixtoolset.org/Content/logo_framed.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>WiX MSI Installer XML</tags>
-        <releaseNotes>WiX v3.10.1 is the latest recommended maintenance release of WiX v3.10 with the following important fixes:
-  * @barnson implemented a workaround for a Visual Studio 2015 issue that caused certain WiX standard custom actions to fail when run on Windows XP and Windows Server 2003. Bug 4902|Bug 4908
-  * @jchoover fixed a bug that prevented some attributes of the WixStandardBootstrapperApplication element from functioning correctly. Bug 4899
-  * @PavelAnfimov fixed a bug that prevented hyperlinks in WixStdBA from working on Windows XP and Windows Server 2003. Bug 4772
+        <releaseNotes>WiX v3.10.2 is the latest recommended maintenance release of WiX v3.10 with a series of mitigations for a serious Windows vulnerability affecting all bootstrapper bundles. We strongly recommend upgrading to WiX v3.10.2 so you can ship safe bundles.
+
+For more information about the vulnerabilities, the mitigations, and the release, see https://www.firegiant.com/blog/2016/1/20/wix-v3.10.2-released/
+
+There are two breaking changes due to this security fix:
+* A bundle cannot be named Setup.exe. When an executable is named Setup.exe, Windows loads additional DLLs in an insecure manner. To prevent such a guaranteed vulnerability, Light.exe now yields an error if the bundle output is named Setup.exe. As Setup.exe might be a common file name, this breaking change is especially annoying. Unfortunately, Windows loads the additional DLLs in a way that Burn code cannot mitigate.
+* The process that loads the bootstrapper application is no longer the process the user started. Attempts to use ::GetModuleFileName to locate the source media (i.e., with loose files next to the bundle .exe) will fail. A workaround is to use the new WixBundleSourceProcessPath and WixBundleSourceProcessFolder variables to find the original process. In general, this shouldn't be a serious problem--bootstrapper applications can already carry all the files they need using Payload elements.
         </releaseNotes>
     </metadata>
 </package>
