--- a/src/WiX.Toolset.nuspec
+++ b/src/WiX.Toolset.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata minClientVersion="2.7">
         <id>WiX.Toolset.UnofficialFork</id>
-        <version>3.10.3</version>
+        <version>3.10.3-ext</version>
         <title>WiX Toolset v3.10 (unofficial)</title>
         <summary>Windows Installer XML (WiX Toolset) binaries for compiling setup projects.</summary>
         <description>This package contains the binaries needed to compile Windows Installer XML (WiX) setup projects. Just add this NuGet package to your WiX setup projects and you're done (no setup required on build servers etc.). Note that you still need to install WiX Toolset in Visual Studio to get the editor experience.
@@ -16,9 +16,13 @@
         <iconUrl>http://wixtoolset.org/Content/logo_framed.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>WiX MSI Installer XML</tags>
-        <releaseNotes>WiX v3.10.3 release.
+        <releaseNotes>WiX v3.10.3-ext release with custom build of burn.exe
 
-The following bugs were fixed:
+The following patches are applied to burn.exe in WiX v3.10.3-ext:
+* New `WixBundleUILevel` property. Burn engine will set it to the value of the UI display level of the bootstrapper.
+* Language used to localize the bootstrapper interface is determined by the `GetUserDefaultUILanguage()` function. There is a new corresponding `UserUILanguageID` property available.
+
+The following bugs were fixed in WiX v3.10.3:
 * layout: Default directory broken with clean room implementation.
 * WiX 3.10.1 failing to update to 3.10.2
 * New bootstrapper fails to run when performing an UpdateReplace
