--- a/src/WiX.Toolset.nuspec
+++ b/src/WiX.Toolset.nuspec
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-16"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata minClientVersion="2.7">
-        <id>WiX.Toolset.UnofficialFork</id>
-        <version>3.10.3-ext</version>
+        <id>WiX.Toolset.BurnAsAdmin.UnofficialFork</id>
+        <version>3.10.3-BurnAsAdmin</version>
         <title>WiX Toolset v3.10 (unofficial)</title>
         <summary>Windows Installer XML (WiX Toolset) binaries for compiling setup projects.</summary>
         <description>This package contains the binaries needed to compile Windows Installer XML (WiX) setup projects. Just add this NuGet package to your WiX setup projects and you're done (no setup required on build servers etc.). Note that you still need to install WiX Toolset in Visual Studio to get the editor experience.
 
-        File issues with the NuGet package at https://github.com/jozefizso/WiX.Toolset.NuGet
+        File issues with the NuGet package at https://github.com/nirbar/WiX.Toolset.BurnAsAdmin.NuGet
         </description>
         <authors>Rob Mensching,Bob Arnson</authors>
-        <owners>jozefizso</owners>
-        <projectUrl>https://github.com/jozefizso/WiX.Toolset.NuGet</projectUrl>
-        <licenseUrl>https://github.com/jozefizso/WiX.Toolset.NuGet/blob/v3.10.3/LICENSE.md</licenseUrl>
+        <owners>nirbar</owners>
+        <projectUrl>https://github.com/nirbar/WiX.Toolset.BurnAsAdmin.NuGet</projectUrl>
+        <licenseUrl>https://github.com/nirbar/WiX.Toolset.BurnAsAdmin.NuGet/blob/v3.10.3/LICENSE.md</licenseUrl>
         <iconUrl>http://wixtoolset.org/Content/logo_framed.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>WiX MSI Installer XML</tags>
-        <releaseNotes>WiX v3.10.3-ext release with custom build of burn.exe
+        <releaseNotes>WiX v3.10.3-BurnAsAdmin release with custom build of burn.exe
 
-The following patches are applied to burn.exe in WiX v3.10.3-ext:
-* New `WixBundleUILevel` property. Burn engine will set it to the value of the UI display level of the bootstrapper.
-* Language used to localize the bootstrapper interface is determined by the `GetUserDefaultUILanguage()` function. There is a new corresponding `UserUILanguageID` property available.
+The following patches are applied to burn.exe in WiX v3.10.3-BurnAsAdmin:
+* Manifest specifies to launch with admin privileges.
 
 The following bugs were fixed in WiX v3.10.3:
 * layout: Default directory broken with clean room implementation.
